--- a/themes/src/main/themes/VAADIN/themes/valo/components/_tree8.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_tree8.scss
@@ -1,6 +1,6 @@
 @import "treegrid";
 
-@mixin valo-tree8 ($primary-stylename: v-tree8) {
+@mixin valo-tree8($primary-stylename: v-tree8) {
 
   @include valo-treegrid($primary-stylename);
 
@@ -12,12 +12,10 @@
 
   .#{$primary-stylename}-row > td {
     background-color: transparent;
-    border: 2px solid transparent;
-    border-radius: $v-border-radius;
-    line-height: inherit;
-    height: 1em;
+    border: 0;
+    line-height: 28px;
     > * {
-      vertical-align: top;
+      vertical-align: baseline;
     }
   }
 
@@ -25,14 +23,11 @@
     background-color: transparent;
     border: none;
   }
-  .#{$primary-stylename}-row-focused::before {
-    border: none;
-    display: none;
-  }
 
-  .#{$primary-stylename}-cell {
-    &::after {
+  .#{$primary-stylename}-row {
+    &::before {
       content: "";
+      display: none;
       position: absolute;
       top: 0;
       left: 0;
@@ -40,39 +35,30 @@
       width: 100%;
       height: 100%;
       border-radius: $v-border-radius;
+      pointer-events: none;
+      border-width: 1px;
     }
   }
 
-  .#{$primary-stylename}-row > .#{$primary-stylename}-cell-focused::after {
-    box-shadow: inset 0 0 0 1px $tree-sel-bg;
+  .#{$primary-stylename}-cell {
+    position: relative;
   }
 
   // Selected
   .#{$primary-stylename}-row-selected {
 
-    $tree-sel-focus-border-color: adjust-color($tree-sel-bg, $lightness: -8%, $saturation: -8%);
-    $tree-sel-focus-box-shadow: inset 0 0 0 1px lighten($v-app-background-color, 8%);
-
-    .#{$primary-stylename}-cell {
-
-      @include valo-gradient($tree-sel-bg);
-      color: valo-font-color($tree-sel-bg);
-      text-shadow: valo-text-shadow($font-color: valo-font-color($tree-sel-bg), $background-color: $tree-sel-bg);
-      border: 2px solid transparent;
-
-      &::after {
-        border: 2px solid $tree-sel-bg;
-      }
-
-      &.#{$primary-stylename}-cell-focused {
-        border-color: $tree-sel-focus-border-color;
-        box-shadow: $tree-sel-focus-box-shadow;
-
-        &::after {
-          border-color: $tree-sel-focus-border-color;
-          box-shadow: $tree-sel-focus-box-shadow;
-        }
-      }
+    > .#{$primary-stylename}-cell {
+      background: transparent;
     }
+
+    &::before {
+      display: block;
+      @include valo-gradient($tree-sel-bg);
+    }
+  }
+
+  .#{$primary-stylename}:focus .#{$primary-stylename}-row-selected.#{$primary-stylename}-row-focused::before {
+    border-color: transparent;
+    box-shadow: inset 0 0 0 1px valo-font-color($tree-sel-bg);
   }
 }
