--- a/themes/src/main/themes/VAADIN/themes/valo/components/_tree8.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_tree8.scss
@@ -1,10 +1,10 @@
 @import "treegrid";
 
-$v-tree8-border-radius: 3px;
-
-@mixin valo-tree8 ($primary-stylename: v-tree8) {
+@mixin valo-tree8($primary-stylename: v-tree8) {
 
   @include valo-treegrid($primary-stylename);
+
+  $tree-sel-bg: $v-grid-row-selected-background-color;
 
   .#{$primary-stylename} {
     background-color: transparent;
@@ -12,7 +12,11 @@ $v-tree8-border-radius: 3px;
 
   .#{$primary-stylename}-row > td {
     background-color: transparent;
-    border: none;
+    border: 0;
+    line-height: 28px;
+    > * {
+      vertical-align: baseline;
+    }
   }
 
   .#{$primary-stylename}-tablewrapper {
@@ -20,43 +24,41 @@ $v-tree8-border-radius: 3px;
     border: none;
   }
 
-  .#{$primary-stylename}-row-selected  > .#{$primary-stylename}-cell {
-    background-color: transparent;
-    background-image: none;
-    color: inherit;
-    text-shadow: none;
-    border: none;
+  .#{$primary-stylename}-row {
+    &::before {
+      content: "";
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      box-sizing: border-box;
+      width: 100%;
+      height: 100%;
+      border-radius: $v-border-radius;
+      pointer-events: none;
+      border-width: 1px;
+    }
   }
 
-  .#{$primary-stylename}-cell-content {
-    border: $v-grid-cell-focused-border;
-    border-color: transparent;
-    border-radius: $v-tree8-border-radius;
-    padding: $v-grid-cell-padding;
-  }
-
-  .#{$primary-stylename}:focus .#{$primary-stylename}-row-focused:before {
-    display: none;
-  }
-
-  .#{$primary-stylename}:focus .#{$primary-stylename}-cell-focused
-    > .#{$primary-stylename}-node > .#{$primary-stylename}-cell-content {
-    border: $v-grid-cell-focused-border;
+  .#{$primary-stylename}-cell {
+    position: relative;
   }
 
   // Selected
   .#{$primary-stylename}-row-selected {
-    $grid-sel-bg: $v-grid-row-selected-background-color;
 
-    > .#{$primary-stylename}-cell > .#{$primary-stylename}-node > .#{$primary-stylename}-cell-content {
-      @include valo-gradient($grid-sel-bg);
-      color: valo-font-color($grid-sel-bg);
-      text-shadow: valo-text-shadow($font-color: valo-font-color($grid-sel-bg), $background-color: $grid-sel-bg);
-      border-color: adjust-color($grid-sel-bg, $lightness: -8%, $saturation: -8%);
+    > .#{$primary-stylename}-cell {
+      background: transparent;
     }
 
-    > .#{$primary-stylename}-cell-focused > .#{$primary-stylename}-node > .#{$primary-stylename}-cell-content {
-      border-color: adjust-color($grid-sel-bg, $lightness: 20%);
+    &::before {
+      display: block;
+      @include valo-gradient($tree-sel-bg);
     }
+  }
+
+  .#{$primary-stylename}:focus .#{$primary-stylename}-row-selected.#{$primary-stylename}-row-focused::before {
+    border-color: transparent;
+    box-shadow: inset 0 0 0 1px valo-font-color($tree-sel-bg);
   }
 }
