--- a/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
@@ -855,6 +855,10 @@ $v-grid-drag-indicator-color: $v-focus-color;
     top: -1px;
   }
 
+  .#{$primary-stylename}-row-drag-top:first-child:before {
+    top: 0;
+  }
+
   .#{$primary-stylename}-row-drag-center:after {
     content: "";
     position: absolute;
@@ -877,27 +881,20 @@ $v-grid-drag-indicator-color: $v-focus-color;
     }
   }
 
-  // Expand Grid's body to cover the whole Grid
-  .#{$primary-stylename}-body-droptarget {
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-  }
   // Show drop hint when the grid is empty or,
   // if the DropMode.ON_TOP is used and dragging below last row
   .#{$primary-stylename}-body-drag-top:after {
     content: "";
     position: absolute;
     top: 0;
-    right: 2px;
+    right: 0;
     bottom: 0;
     left: 0;
     pointer-events: none;
     border: 2px solid $v-grid-drag-indicator-color;
+    z-index: 100;
   }
 }
-
 
 @include keyframes(valo-grid-editor-footer-animate-in) {
   0% {
