--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -110,6 +110,9 @@
         <li><tt>DataCommunicator</tt>, <tt>DataKeyMapper</tt> and <tt>KeyMapper</tt> public APIs have some minor changes for better bean identification.</li>
         <li><tt>Grid.createColumn</tt> now has one more parameter <tt>presentationProvider</tt>.</li>
         <li>Valo link and (native) button styles are no longer global but only apply to the corresponding components when the mix-in is included.</li>
+        <li>The <tt>View</tt> interface now has additional methods and default implementations for them (source compatible but binary incompatible).</li>
+        <li>The <tt>HasValue/tt> interface now has an additional method <tt>getDefaultValidator()</tt> with a default implementation (source compatible but binary incompatible).</li>
+        <li><tt>TreeGrid.createColumn()/tt> has an additional parameter.</li>
 
         <h2>For incompatible or behaviour-altering changes in 8.0, please see <a href="https://vaadin.com/download/release/8.0/8.0.0/release-notes.html#incompatible">8.0 release notes</a></h2>
         
