--- a/themes/src/main/themes/VAADIN/themes/valo/components/_combobox.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_combobox.scss
@@ -161,6 +161,12 @@
     width: $unit-size;
     line-height: 1;
     padding-top: .12em;
+
+    $padding-width: ceil($unit-size/6);
+    @if $border-radius {
+      $padding-width: $padding-width + ceil($border-radius/3);
+    }
+    margin-left: $padding-width;
   }
 
   &[class*="prompt"] > [class*="input"] {
