Fix typo in release notes

--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -136,7 +136,7 @@
                 <li>Push is currently not supported in portals (See <a
                     href="https://github.com/vaadin/framework/issues/3741">#3741</a>)
                 </li>
-                <li>>Transport mode WEBSOCKET does not support invalidating the session on Tomcat 7,
+                <li>Transport mode WEBSOCKET does not support invalidating the session on Tomcat 7,
                      nor setting cookies for the session. The new transport mode WEBSOCKET_XHR can be
                      used to bypass these limitations.
                      <br />
