--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -64,7 +64,7 @@
             a number of new features and bug fixes, as listed in the <a
                 href="#enhancements">list of enhancements</a> and <a
                 href="#changelog">change log</a> below.
-		The API in this beta version is not considered final and may change based on your feedback.
+<!--		The API in this beta version is not considered final and may change based on your feedback. -->
 	</p>
 
         <!-- ================================================================ -->
@@ -393,11 +393,11 @@
         </p>
 
         <ul>
-            <li>Mozilla Firefox (latest version, currently 48)</li>
-            <li>Mozilla Firefox ESR (latest version, currently 45 ESR)</li>
+            <li>Mozilla Firefox (latest version, currently 54)</li>
+            <li>Mozilla Firefox ESR (latest version, currently 52 ESR)</li>
             <li>Internet Explorer 11, Edge (latest version)</li>
             <li>Safari 9+</li>
-            <li>Google Chrome (latest version, currently 52)</li>
+            <li>Google Chrome (latest version, currently 59)</li>
         </ul>
 
         <p>
