Update release notes incompatible changes heading

--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -99,7 +99,7 @@
             to Vaadin Framework 8</a>.
         </p>
 
-        <h2 id="incompatible">Incompatible or Behavior-altering Changes in @version@</h2>
+        <h2 id="incompatible">Incompatible or Behavior-altering Changes in @version-minor@</h2>
         
         <li>The <tt>TreeGrid</tt> component replaces <tt>TreeTable</tt> component</li>
         <li>The <tt>Tree</tt> component replaces old <tt>Tree</tt> component</li>
