--- a/themes/src/main/themes/VAADIN/themes/valo/components/_combobox.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_combobox.scss
@@ -18,6 +18,10 @@
       position: absolute;
       pointer-events: none;
     }
+
+    .v-icon.FontAwesome {
+        margin-left: 0px;
+      }
   }
 
   .#{$primary-stylename}-error {
